--- a/index.html
+++ b/index.html
@@ -97,13 +97,12 @@
         </div>
     </div>
     <div class="container-fluid" id="fleet-page">
-        <div class="row row-eq-height">
+        <div class="row">
             <div class="col-sm-6 fleet-left">
                 <h2 class="font-weight-bold" id="btn-left">Busy</h2>
                 <div class="view overlay zoom">
                     <img src="img/flota2.JPG" class="img-fluid photo" id="img-left" alt="zoom">
                 </div>
-
             </div>
             <div class="col-sm-6 fleet-right">
                 <h2 class="font-weight-bold" id="btn-right">Autokary</h2>
@@ -112,7 +111,6 @@
                 </div>
             </div>
             <div class="col-sm-12" id="coaches">
-                <!-- <button class="btn btn-primary" id="btn-right-close">Zamknij</button> -->
                 <i class="fas fa-times fa-3x mr-5 d-flex justify-content-end text-white" id="btn-right-close"></i>
                 <div class="row">
                     <div class="col-sm-6 col-lg-3">
@@ -121,9 +119,7 @@
                             <!-- Card image -->
                             <div class="view overlay" id="coaches-1">
                                 <img class="card-img-top" src="img/scania-new.JPG" alt="Card image cap">
-                                <a href="#">
-                                    <div class="mask rgba-white-slight"></div>
-                                </a>
+                                <div class="mask rgba-white-slight"></div>
                             </div>
                             <!-- Card content -->
                             <div class="card-body">
@@ -144,11 +140,9 @@
                         <!-- Card -->
                         <div class="card">
                             <!-- Card image -->
-                            <div class="view overlay">
+                            <div class="view overlay" id="coaches-2">
                                 <img class="card-img-top" src="img/man.JPG" alt="Card image cap">
-                                <a href="#!">
-                                    <div class="mask rgba-white-slight"></div>
-                                </a>
+                                <div class="mask rgba-white-slight"></div>
                             </div>
                             <!-- Card content -->
                             <div class="card-body">
@@ -169,11 +163,9 @@
                         <!-- Card -->
                         <div class="card">
                             <!-- Card image -->
-                            <div class="view overlay">
+                            <div class="view overlay" id="coaches-3">
                                 <img class="card-img-top" src="img/volvo-new.jpg" alt="Card image cap">
-                                <a href="#!">
-                                    <div class="mask rgba-white-slight"></div>
-                                </a>
+                                <div class="mask rgba-white-slight"></div>
                             </div>
                             <!-- Card content -->
                             <div class="card-body">
@@ -194,11 +186,9 @@
                         <!-- Card -->
                         <div class="card">
                             <!-- Card image -->
-                            <div class="view overlay">
+                            <div class="view overlay" id="coaches-4">
                                 <img class="card-img-top" src="img/renault.JPG" alt="Card image cap">
-                                <a href="#!">
-                                    <div class="mask rgba-white-slight"></div>
-                                </a>
+                                <div class="mask rgba-white-slight"></div>
                             </div>
                             <!-- Card content -->
                             <div class="card-body">
@@ -213,37 +203,235 @@
                                 </ul>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12" id="buses">
+                <!-- <button class="btn btn-primary" id="btn-right-close">Zamknij</button> -->
+                <i class="fas fa-times fa-3x mr-5 d-flex justify-content-end text-white" id="btn-left-close"></i>
+                <div class="row">
+                    <div class="col-sm-6 col-lg-3">
                         <!-- Card -->
+                        <div class="card">
+                            <!-- Card image -->
+                            <div class="view overlay" id="buses-1">
+                                <img class="card-img-top" src="img/mercedes2-side.JPG" alt="Card image cap">
+                                <div class="mask rgba-white-slight"></div>
+                            </div>
+                            <!-- Card content -->
+                            <div class="card-body">
+
+                                <!-- Title -->
+                                <h4 class="card-title">MERCEDES SPRINTER 518</h4>
+                                <!-- Text -->
+                                <ul>
+                                    <li>BUS TURYSTYCZNY NA 24 OS. VIP</li>
+                                    <li>klimatyzacja z indywidualnym nawiewem</li>
+                                    <li>DVD, telewizja, rozkładane fotele</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Card -->
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <!-- Card -->
+                        <div class="card">
+                            <!-- Card image -->
+                            <div class="view overlay" id="buses-2">
+                                <img class="card-img-top" src="img/iveco.jpg" alt="Card image cap">
+                                <div class="mask rgba-white-slight"></div>
+                            </div>
+                            <!-- Card content -->
+                            <div class="card-body">
+
+                                <!-- Title -->
+                                <h4 class="card-title">IVECO PRODIG</h4>
+                                <!-- Text -->
+                                <ul>
+                                    <li>BUS TURYSTYCZNY NA 32 OS.</li>
+                                    <li>klimatyzacja z indywidualnym rozprowadzaniem</li>
+                                    <li>radio, stoliki, rozkładane fotele</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Card -->
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <!-- Card -->
+                        <div class="card">
+                            <!-- Card image -->
+                            <div class="view overlay" id="buses-3">
+                                <img class="card-img-top" src="img/mercedes-side3.JPG" alt="Card image cap">
+                                <div class="mask rgba-white-slight"></div>
+                            </div>
+                            <!-- Card content -->
+                            <div class="card-body">
+
+                                <!-- Title -->
+                                <h4 class="card-title">MERCEDES SPRINTER MERCUS</h4>
+                                <!-- Text -->
+                                <ul>
+                                    <li>BUS TURYSTYCZNY NA 20 OS. VIP</li>
+                                    <li>klimatyzacja z indywidualnym rozprowadzaniem</li>
+                                    <li>DVD, telewizja, wi-fi, rozkładane fotele</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Card -->
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <!-- Card -->
+                        <div class="card">
+                            <!-- Card image -->
+                            <div class="view overlay" id="buses-4">
+                                <img class="card-img-top" src="img/renault.JPG" alt="Card image cap">
+                                <div class="mask rgba-white-slight"></div>
+                            </div>
+                            <!-- Card content -->
+                            <div class="card-body">
+
+                                <!-- Title -->
+                                <h4 class="card-title">RENAULT ILLIADE</h4>
+                                <!-- Text -->
+                                <ul>
+                                    <li>AUTOKAR TURYSTYCZNY NA 56 OS.</li>
+                                    <li>klimatyzacja, ogrzewanie postojowe</li>
+                                    <li>DVD, radio, lodówka, mikrofon, WC</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Modal -->
             <div class="modal fade bs-example-modal-lg" id="coaches-modal-1" tabindex="-1" role="dialog"
-                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                aria-labelledby="coaches-modal-1" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <div id="carousel-coaches-1" class="carousel-coaches-1 carousel slide" data-ride=".carousel-coaches-1">
+                            <div id="carousel-coaches-1" class="carousel-coaches-1 carousel slide"
+                                data-ride=".carousel-coaches-1">
                                 <div class="carousel-inner">
-                                  <div class="carousel-item active">
-                                    <img src="img/scania.JPG" class="d-block w-100" alt="...">
-                                  </div>
-                                  <div class="carousel-item">
-                                    <img src="img/scania-side.JPG" class="d-block w-100" alt="...">
-                                  </div>
-                                  <div class="carousel-item">
-                                    <img src="img/scania-side2.JPG" class="d-block w-100" alt="...">
-                                  </div>
+                                    <div class="carousel-item active">
+                                        <img src="img/scania.JPG" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/scania-side.JPG" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/scania-side2.JPG" class="d-block w-100" alt="...">
+                                    </div>
                                 </div>
-                                <a class="carousel-control-prev" href=".carousel-coaches-1" role="button" data-slide="prev">
-                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                  <span class="sr-only">Previous</span>
+                                <a class="carousel-control-prev" href=".carousel-coaches-1" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href=".carousel-coaches-1" role="button" data-slide="next">
-                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                  <span class="sr-only">Next</span>
+                                <a class="carousel-control-next" href=".carousel-coaches-1" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
                                 </a>
-                              </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade bs-example-modal-lg" id="coaches-modal-2" tabindex="-1" role="dialog"
+                aria-labelledby="coaches-modal-2" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <div id="carousel-coaches-2" class="carousel-coaches-2 carousel slide"
+                                data-ride=".carousel-coaches-2">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="img/man.JPG" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/man-w2.JPG" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/man-side.JPG" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href=".carousel-coaches-2" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href=".carousel-coaches-2" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade bs-example-modal-lg" id="coaches-modal-3" tabindex="-1" role="dialog"
+                aria-labelledby="coaches-modal-3" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <div id="carousel-coaches-3" class="carousel-coaches-3 carousel slide"
+                                data-ride=".carousel-coaches-3">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="img/volvo.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/volvo-w.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/volvo-back.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href=".carousel-coaches-3" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href=".carousel-coaches-3" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade bs-example-modal-lg" id="coaches-modal-4" tabindex="-1" role="dialog"
+                aria-labelledby="coaches-modal-3" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <div id="carousel-coaches-4" class="carousel-coaches-4 carousel slide"
+                                data-ride=".carousel-coaches-4">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="img/volvo.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/volvo-w.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/volvo-back.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href=".carousel-coaches-4" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href=".carousel-coaches-4" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
